[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/badsplash.png" type="Texture" id=1]
[ext_resource path="res://titlescreen.gd" type="Script" id=2]
[ext_resource path="res://fonts/OpenSans-title.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/pod.png" type="Texture" id=4]
[ext_resource path="res://titlepod.gd" type="Script" id=5]

[node name="titlescreen" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 100
custom_constants/margin_top = 20
custom_constants/margin_left = 100
custom_constants/margin_bottom = 20
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 100.0
margin_top = 20.0
margin_right = 1180.0
margin_bottom = 700.0
mouse_filter = 2

[node name="Title" type="Label" parent="VBoxContainer"]
margin_right = 1080.0
margin_bottom = 90.0
rect_min_size = Vector2( 0, 90 )
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
text = "The Witch Reactor"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 94.0
margin_right = 1080.0
margin_bottom = 680.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 240.0
margin_bottom = 586.0
rect_min_size = Vector2( 240, 0 )
mouse_filter = 2
custom_constants/separation = 10

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 240.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )

[node name="NewGameButton" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 40.0
margin_right = 200.0
margin_bottom = 90.0
rect_min_size = Vector2( 200, 50 )
size_flags_horizontal = 0
text = "New Game"

[node name="CheckButton" type="CheckButton" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 100.0
margin_right = 128.0
margin_bottom = 140.0
size_flags_horizontal = 0
size_flags_vertical = 0
pressed = true
text = "Tutorial"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 150.0
margin_right = 240.0
margin_bottom = 586.0
size_flags_vertical = 3

[node name="TitlePod" type="Node2D" parent="VBoxContainer"]
position = Vector2( 566, 500 )
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="VBoxContainer/TitlePod"]
rotation = 1.5708
texture = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
light_mask = 3
z_index = -1
texture = ExtResource( 1 )
centered = false

[connection signal="button_down" from="VBoxContainer/HBoxContainer/VBoxContainer/NewGameButton" to="." method="_on_NewGameButton_button_down"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer/VBoxContainer/CheckButton" to="." method="_on_CheckButton_toggled"]
